force-app/main/default/objects/Payment_Receipt__c/fields/Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification__c</fullName>
    <formula>Text(Opportunity__r.Account.Account_Classification__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Classification</label>
    <type>Text</type>
</CustomField>