force-app/main/default/objects/Payment_Receipt__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>IF( Opportunity__r.Account.RecordType.Name  == &apos;Investors &amp; Intermediary&apos;,
Opportunity__r.Account.ShippingStreet &amp;  BR()
&amp; Opportunity__r.Account.ShippingCity &amp;  BR()
&amp; Opportunity__r.Account.ShippingState &amp;  BR()
&amp; Opportunity__r.Account.ShippingCountry &amp;  BR()
&amp; Opportunity__r.Account.ShippingPostalCode ,
 Opportunity__r.BillingAddress__r.Billing_Street__c &amp;  BR()
&amp; Opportunity__r.BillingAddress__r.Billing_City__c &amp;  BR()
&amp; TEXT(Opportunity__r.BillingAddress__r.BillingState__c) &amp;  BR()
&amp; TEXT(Opportunity__r.BillingAddress__r.BillingCountry__c) &amp;  BR() 
&amp;  Opportunity__r.BillingAddress__r.Billing_Zip_Postal_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>