force-app/main/default/objects/Payment_Receipt__c/fields/Amount_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Amount_Transfer__c</fullName>
    <label>Amount Transfer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>