force-app/main/default/objects/Payment_Receipt__c/fields/Amount_Transfer_Currency__c.field-meta.xml
<CustomField>
    <fullName>Amount_Transfer_Currency__c</fullName>
    <label>Amount Transfer Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AED - UAE Dirham</fullName>
            </value>
            <value>
                <fullName>AUD - Australian Dollar</fullName>
            </value>
            <value>
                <fullName>CAD - Canadian Dollar</fullName>
            </value>
            <value>
                <fullName>EUR - Euro</fullName>
            </value>
            <value>
                <fullName>GBP - British Pound</fullName>
            </value>
            <value>
                <fullName>INR - Indian Rupee</fullName>
            </value>
            <value>
                <fullName>JPY - Japanese Yen</fullName>
            </value>
            <value>
                <fullName>SGD - Singapore Dollar</fullName>
            </value>
            <value>
                <fullName>USD - U.S. Dollar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>