force-app/main/default/objects/Payment_Receipt__c/fields/Authorised_by__c.field-meta.xml
<CustomField>
    <fullName>Authorised_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorised By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Payment_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>