force-app/main/default/objects/Payment_Receipt__c/fields/Base_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Fee_Amount__c</fullName>
    <formula>Gross_Amount__c -( IGST_Payable__c + CGST_Payable__c + SGST_UTGST_Payable__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Base/Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>