force-app/main/default/objects/Payment_Receipt__c/fields/CGST_Payable__c.field-meta.xml
<CustomField>
    <fullName>CGST_Payable__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CGST Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>