force-app/main/default/objects/Payment_Receipt__c/fields/Check_Current_Year__c.field-meta.xml
<CustomField>
    <fullName>Check_Current_Year__c</fullName>
    <formula>if(AND(Created_Date__c &gt;= DATE( YEAR( TODAY()) ,04,01),Created_Date__c &lt;= DATE( YEAR( TODAY())+1 ,03,31)),&apos;Current Year&apos;,Bill_Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Current Year</label>
    <type>Text</type>
</CustomField>