force-app/main/default/objects/Payment_Receipt__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <formula>IF(Opportunity__r.Bill_To__c != null,Opportunity__r.Bill_To__r.Name,Opportunity__r.Account.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>