force-app/main/default/objects/Payment_Receipt__c/fields/Customer_State__c.field-meta.xml
<CustomField>
    <fullName>Customer_State__c</fullName>
    <formula>IF( Opportunity__r.Account.RecordType.Name == &apos;Investors &amp; Intermediary&apos;, Opportunity__r.Account.ShippingState , TEXT(Opportunity__r.BillingAddress__r.BillingState__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer State</label>
    <type>Text</type>
</CustomField>