force-app/main/default/objects/Payment_Receipt__c/fields/Customer_State_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_State_Code__c</fullName>
    <formula>Opportunity__r.Account.State_Code__c</formula>
    <label>Customer State Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>