force-app/main/default/objects/Payment_Receipt__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <formula>Opportunity__r.Account.Email_Auditor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email ID</label>
    <type>Text</type>
</CustomField>