force-app/main/default/objects/Payment_Receipt__c/fields/GrossAmount__c.field-meta.xml
<CustomField>
    <fullName>GrossAmount__c</fullName>
    <formula>Fee_Amount__c + IGST_Payable__c   +  CGST_Payable__c  + SGST_UTGST_Payable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Amount NA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>