force-app/main/default/objects/Payment_Receipt__c/fields/GST_No__c.field-meta.xml
<CustomField>
    <fullName>GST_No__c</fullName>
    <formula>Opportunity__r.BillingAddress__r.GSTN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST No</label>
    <type>Text</type>
</CustomField>