force-app/main/default/objects/Payment_Receipt__c/fields/IGST_Realisable__c.field-meta.xml
<CustomField>
    <fullName>IGST_Realisable__c</fullName>
    <defaultValue>0</defaultValue>
    <label>IGST Realisable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>