force-app/main/default/objects/Payment_Receipt__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice No</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Payment Receipts</relationshipLabel>
    <relationshipName>Payment_Receipts1</relationshipName>
    <type>Lookup</type>
</CustomField>