force-app/main/default/objects/Payment_Receipt__c/fields/Is_Advance__c.field-meta.xml
<CustomField>
    <fullName>Is_Advance__c</fullName>
    <formula>IF(ISBLANK(Invoice_No__c),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Advance</label>
    <type>Checkbox</type>
</CustomField>