force-app/main/default/objects/Payment_Receipt__c/fields/Name_of_Drawee_Bank__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Drawee_Bank__c</fullName>
    <label>Name of Drawee Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>