force-app/main/default/objects/Payment_Receipt__c/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <formula>IF( Opportunity__r.RecordType.Name == &apos;New Business&apos;, &apos;Rating&apos;, Opportunity__r.RecordType.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Record Type</label>
    <type>Text</type>
</CustomField>