force-app/main/default/objects/Payment_Receipt__c/fields/PAN_No__c.field-meta.xml
<CustomField>
    <fullName>PAN_No__c</fullName>
    <formula>Opportunity__r.Account.PAN_Number__c</formula>
    <label>PAN No</label>
    <type>Text</type>
</CustomField>