force-app/main/default/objects/Payment_Receipt__c/fields/Payment_Receipt_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Receipt_Created_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Payment Receipt Created Date</label>
    <type>Date</type>
</CustomField>