force-app/main/default/objects/Payment_Receipt__c/fields/Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Phone_No__c</fullName>
    <formula>Opportunity__r.Account.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone No</label>
    <type>Text</type>
</CustomField>