force-app/main/default/objects/Payment_Receipt__c/fields/Receipt_No__c.field-meta.xml
<CustomField>
    <fullName>Receipt_No__c</fullName>
    <formula>IF( Is_Advance__c == TRUE , &apos;AD/&apos;+Opportunity__r.Account.Branch__r.Branch_Code__c+&apos;/&apos;+Text(YEAR( TODAY() ) )+&apos;/&apos;+ RIGHT(Name, 4), &apos;PR/&apos;+Opportunity__r.Account.Branch__r.Branch_Code__c+&apos;/&apos;+Text(YEAR( TODAY() ) )+&apos;/&apos;+ RIGHT(Name, 4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt No</label>
    <type>Text</type>
</CustomField>