force-app/main/default/objects/Payment_Receipt__c/fields/Receipt_Voucher_Number__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Voucher_Number__c</fullName>
    <label>Receipt Voucher Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>