force-app/main/default/objects/Payment_Receipt__c/fields/SAC_HSN__c.field-meta.xml
<CustomField>
    <fullName>SAC_HSN__c</fullName>
    <formula>IF( ISPICKVAL(Opportunity__r.Instrument_type_4__c, &quot;IPO Monitoring&quot;),&apos;998599&apos;,IF( ISPICKVAL(Opportunity__r.Business_Segment__c, &quot;Rating&quot;),&apos;998591&apos;,IF(ISPICKVAL(Opportunity__r.Business_Segment__c, &quot;Research&quot;),&apos;998371&apos;,&apos;998311&apos;) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAC/HSN</label>
    <type>Text</type>
</CustomField>