force-app/main/default/objects/Payment_Receipt__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <formula>IF( Opportunity__r.RecordType.Name == &apos;Surveillance&apos;, &apos;RS&apos;, IF( ISPICKVAL( Opportunity__r.Business_Segment__c , &quot;Research&quot;),&apos;SR&apos;,&apos;RF&apos; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Code</label>
    <type>Text</type>
</CustomField>