force-app/main/default/objects/Payment_Receipt__c/fields/SGST_Rate__c.field-meta.xml
<CustomField>
    <fullName>SGST_Rate__c</fullName>
    <formula>IF( Account_Classification__c == &apos;Non-SEZ&apos;,
IF( AND(Opportunity__r.Account.RecordType.Name ==&apos;Issuer&apos;,
TEXT(Opportunity__r.BillingAddress__r.BillingState__c) == TEXT(Opportunity__r.Account.Branch__r.State__c)
) , 0.09,
IF(AND(Opportunity__r.Account.RecordType.Name ==&apos;Investors &amp; Intermediary&apos;,
Opportunity__r.Account.ShippingState == TEXT(Opportunity__r.Account.Branch__r.State__c))
, 0.09,
0)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>