force-app/main/default/objects/Payment_Receipt__c/fields/SGST_UTGST_Realisable__c.field-meta.xml
<CustomField>
    <fullName>SGST_UTGST_Realisable__c</fullName>
    <defaultValue>0</defaultValue>
    <label>SGST/UTGST Realisable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>