force-app/main/default/objects/Payment_Receipt__c/fields/TAN_No__c.field-meta.xml
<CustomField>
    <fullName>TAN_No__c</fullName>
    <formula>Opportunity__r.Account.TAN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TAN No</label>
    <type>Text</type>
</CustomField>