force-app/main/default/objects/Payment_Receipt__c/fields/Tax_at_source_deducted_by_client_TDS__c.field-meta.xml
<CustomField>
    <fullName>Tax_at_source_deducted_by_client_TDS__c</fullName>
    <label>Tax at Source Deducted By Client (TDS)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>