force-app/main/default/objects/Payment_Receipt__c/fields/Total_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Taxable_Amount__c</fullName>
    <formula>CGST_Payable__c  +  IGST_Payable__c  +  SGST_UTGST_Payable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Taxable Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>