force-app/main/default/objects/Payment_Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Fee_Amount__c</columns>
    <columns>GrossAmount__c</columns>
    <columns>Total_Taxable_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>